# lcv-retail-analytics-platform

./: .env.template  .gitignore  .pre-commit-config.yaml  BEST_PRACTICES.md  CHANGELOG.md  CLAUDE.md  GOOD_PRACTICES.md  GOVERNANCE.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
SCHEMA/: data_dictionary.md  star_schema.sql
docs/: CHANGELOG.md  PERFORMANCE_LOG.md
src/: README.md
src/analytics/: README.md  queries.sql
src/etl/: README.md  gcs_to_bigquery.py  postgres_to_gcs.py  setup_bigquery.py
src/etl/dbt_project/: README.md  dbt_project.yml
src/etl/dbt_project/models/marts/: fct_customer_churn_features.sql  fct_customer_lifetime_value.sql  fct_daily_sales_trends.sql  fct_product_performance.sql  fct_regional_sales.sql  fct_store_performance.sql  schema.yml
src/etl/dbt_project/models/staging/: schema.yml  stg_customer_clean.sql  stg_date_clean.sql  stg_product_clean.sql  stg_sales_clean.sql  stg_store_clean.sql
src/ml/: README.md  api.py  churn_model.py  train_churn.py
src/postgres/: README.md  seed_synthetic_data.py
tests/unit/: test_seed_synthetic_data.py
